Fixed homepage paragraph z-index.

--- a/css/style.css
+++ b/css/style.css
@@ -601,7 +601,6 @@ section.homepage-section.homepage-section-hero {
 
 section.homepage-section {
   margin: 2em 0 6em 0;
-  letter-spacing: 1px;
   font-size: 1.2em;
 }
 
@@ -994,5 +993,10 @@ body.scrolled .menu .logo {
 
 .menu-toggle:hover {
     color: var(--red);
+}
+
+.homepage-section:not(:first-child) {
+    z-index: 10;
+    position: relative;
 }
 
